<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etTrackingNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/tracking_number"
            android:inputType="number" />

        <EditText
            android:id="@+id/etRecipientName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/recipient"
            android:autofillHints=""
            android:inputType="textPersonName"
            android:layout_marginTop="12dp" />

        <EditText
            android:id="@+id/etAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address"
            android:autofillHints=""
            android:inputType="textPostalAddress"
            android:layout_marginTop="12dp" />

        <Button
            android:id="@+id/btnSaveParcel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_parcel"
            android:layout_marginTop="20dp"
            android:backgroundTint="#004F54"
            android:textColor="#FFFFFF" />
    </LinearLayout>
</ScrollView>
